# systray-rs

./: Cargo.toml  README.md
examples/: trayicon.rs
src/: lib.rs
src/api/cocoa/: mod.rs
src/api/linux/: mod.rs
src/api/win32/: mod.rs
