[package]
name = "systray"
version = "0.2.0"
authors = ["Kyle Machulis <kyle@machul.is>"]
description = "Rust library for making minimal cross-platform systray GUIs"
license = "BSD-3-Clause"
homepage = "http://github.com/qdot/systray-rs"
repository = "https://github.com/qdot/systray-rs.git"
readme = "README.md"
keywords = ["gui"]

[dependencies]
libc="0.2"
log="0.3"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.2"
user32-sys = "0.2"
kernel32-sys = "0.2"
shell32-sys = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.2"
glib = "0.3.1"
libappindicator = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.9"
core-foundation = "0.4"
